--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,19 @@
       <version>1.3.4</version>
     </dependency>
 
+    <!-- JSON -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-scala_${scala.compat.version}</artifactId>
+      <version>2.8.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json4s</groupId>
+      <artifactId>json4s-jackson_${scala.compat.version}</artifactId>
+      <version>3.5.1</version>
+    </dependency>
+
+
     <!-- Testing -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
