--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,13 @@
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.compat.version}</artifactId>
-      <version>2.2.4</version>
+      <version>3.0.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scalamock</groupId>
+      <artifactId>scalamock-scalatest-support_${scala.compat.version}</artifactId>
+      <version>3.5.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
