--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,14 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <encoding>UTF-8</encoding>
-    <scala.version>2.12.3</scala.version>
+    <scala.version>2.12.6</scala.version>
     <scala.compat.version>2.12</scala.compat.version>
   </properties>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.6.RELEASE</version>
+    <version>2.0.4.RELEASE</version>
   </parent>
 
   <repositories> 
@@ -59,19 +59,19 @@
     <dependency>
       <groupId>org.log4s</groupId>
       <artifactId>log4s_${scala.compat.version}</artifactId>
-      <version>1.3.4</version>
+      <version>1.6.1</version>
     </dependency>
 
     <!-- JSON -->
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-scala_${scala.compat.version}</artifactId>
-      <version>2.8.7</version>
+      <version>2.9.6</version>
     </dependency>
     <dependency>
       <groupId>org.json4s</groupId>
       <artifactId>json4s-jackson_${scala.compat.version}</artifactId>
-      <version>3.5.1</version>
+      <version>3.6.1</version>
     </dependency>
 
 
@@ -90,13 +90,13 @@
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.compat.version}</artifactId>
-      <version>3.0.1</version>
+      <version>3.0.5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.scalamock</groupId>
-      <artifactId>scalamock-scalatest-support_${scala.compat.version}</artifactId>
-      <version>3.5.0</version>
+      <artifactId>scalamock_${scala.compat.version}</artifactId>
+      <version>4.1.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
