--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>01-starter</module>
     <module>02-unit-tests</module>
     <module>03-deploy</module>
+    <module>04-config</module>
   </modules>
 
 </project>
