--- a/04-config/pom.xml
+++ b/04-config/pom.xml
@@ -46,6 +46,16 @@
       <artifactId>json4s-jackson_${scala.compat.version}</artifactId>
       <version>3.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.wacai</groupId>
+      <artifactId>config-annotation_${scala.compat.version}</artifactId>
+      <version>0.3.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.log4s</groupId>
+      <artifactId>log4s_${scala.compat.version}</artifactId>
+      <version>1.6.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -91,6 +101,13 @@
           </execution>
         </executions>
         <configuration>
+          <compilerPlugins>
+            <compilerPlugin>
+              <groupId>org.scalamacros</groupId>
+              <artifactId>paradise_${scala.version}</artifactId>
+              <version>2.1.0</version>
+            </compilerPlugin>
+          </compilerPlugins>
           <launchers>
             <launcher>
               <id>default</id>
