--- a/04-config/pom.xml
+++ b/04-config/pom.xml
@@ -52,9 +52,9 @@
       <version>0.3.7</version>
     </dependency>
     <dependency>
-      <groupId>org.log4s</groupId>
-      <artifactId>log4s_${scala.compat.version}</artifactId>
-      <version>1.6.1</version>
+      <groupId>com.typesafe.scala-logging</groupId>
+      <artifactId>scala-logging_${scala.compat.version}</artifactId>
+      <version>3.9.0</version>
     </dependency>
   </dependencies>
 
