--- a/04-config/src/main/resources/crontab.conf
+++ b/04-config/src/main/resources/crontab.conf
@@ -1,7 +1,15 @@
 crontab {
-  hour {
-    start = 0
-    end = 23
+  task1 {
+    expr = "*/10 * * * * *"
+    action = laugh
+    desc = every ten seconds
   }
-  interval = 5m
+  task2 {
+    fixed {
+      delay = 1000
+      rate = 3000
+    }
+    action = blink
+    desc = every three seconds
+  }
 }
