--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>02-unit-tests</module>
     <module>03-deploy</module>
     <module>04-config</module>
+    <module>05-validation</module>
   </modules>
 
 </project>
